egonlang-core/res/examples/valid/range_as_if_else_expr.eg
if (true) { 
    1..50
 } else {
    50..100
};